--- a/css/styles.css
+++ b/css/styles.css
@@ -11,13 +11,32 @@ html, body {
     background-color: #2C3E50;
     height: 100px;
     width: 100%;
+    padding: 20px;
 }
 .nav-main{
     width: 100%;
     max-width: 960px;
     margin: 0 auto;
-    border: 1px solid yellow;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .nav-main a{
     color: white;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+.menu-items {
+    display: flex;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+.menu-items li {
+    margin: 15px 10px 10px 10px;
+    font-size: 14px;
+}
+.nav-branch {
+    font-size: 18px;
+    font-weight: 700;
 }
