--- a/css/styles.css
+++ b/css/styles.css
@@ -62,3 +62,26 @@ body {
   margin: 0;
   font-size: 1rem;
 }
+#portfolio {
+    width: 100%;
+    max-width: 960px;
+    margin: 0 auto;
+}
+.portfolio-title{
+    font-size: 2rem;
+    text-transform: uppercase;
+    text-align: center;
+    color: #2C3E50;
+}
+.portfolio-container{
+display: flex;
+justify-content: center;
+flex-wrap: wrap; /* Quebrar a linha quando houver espaço*/
+}
+.portfolio-item {
+    width: calc(100% - 40px);
+    max-width: 420px;
+    border-radius: 10px;
+    cursor: pointer;
+    margin: 20px;
+}
