--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@ body {
   height: 100px;
   width: 100%;
   padding: 20px;
+  position: fixed;
 }
 .nav-main {
   width: 100%;
@@ -46,7 +47,7 @@ body {
 .profile-container {
   background-color: #1abc9c;
   display: flex;
-  padding: 60px 0;
+  padding: 160px 0 60px 0;
   flex-direction: column;
   align-items: center;
   color: white;
@@ -72,6 +73,7 @@ body {
     text-transform: uppercase;
     text-align: center;
     color: #2C3E50;
+    margin: 60px 0 10px 0;
 }
 .portfolio-container{
 display: flex;
