--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+/*ELEMENTS*/
 * {
   box-sizing: border-box;
 }
@@ -8,6 +9,15 @@ body {
   margin: 0;
   font-family: "Montserrat", sans-serif;
 }
+footer {
+    height: 120px;
+    background-color: #2C3E50;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/*CLASSES*/
 .nav-container {
   background-color: #2c3e50;
   height: 100px;
@@ -86,4 +96,14 @@ flex-wrap: wrap; /* Quebrar a linha quando houver espaço*/
     border-radius: 10px;
     cursor: pointer;
     margin: 20px;
+}
+.footer-title{
+    color: white;
+    font-size: 14px;
+    margin-top: 30px;
+}
+.social-container img {
+    width: 32px;
+    height: 32px;
+    margin: 10px;
 }
