--- a/css/styles.css
+++ b/css/styles.css
@@ -10,11 +10,11 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 footer {
-    height: 120px;
-    background-color: #2C3E50;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  height: 120px;
+  background-color: #2c3e50;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /*CLASSES*/
@@ -74,36 +74,64 @@ footer {
   font-size: 1rem;
 }
 #portfolio {
-    width: 100%;
-    max-width: 960px;
-    margin: 0 auto;
+  width: 100%;
+  max-width: 960px;
+  margin: 0 auto;
 }
-.portfolio-title{
-    font-size: 2rem;
-    text-transform: uppercase;
-    text-align: center;
-    color: #2C3E50;
-    margin: 60px 0 10px 0;
+.portfolio-title {
+  font-size: 2rem;
+  text-transform: uppercase;
+  text-align: center;
+  color: #2c3e50;
+  margin: 60px 0 10px 0;
 }
-.portfolio-container{
-display: flex;
-justify-content: center;
-flex-wrap: wrap; /* Quebrar a linha quando houver espaço*/
+.portfolio-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap; /* Quebrar a linha quando houver espaço*/
 }
 .portfolio-item {
-    width: calc(100% - 40px);
-    max-width: 420px;
-    border-radius: 10px;
-    cursor: pointer;
-    margin: 20px;
+  width: calc(100% - 40px);
+  max-width: 420px;
+  border-radius: 10px;
+  cursor: pointer;
+  margin: 20px;
 }
-.footer-title{
-    color: white;
-    font-size: 14px;
-    margin-top: 30px;
+.footer-title {
+  color: white;
+  font-size: 14px;
+  margin-top: 30px;
 }
 .social-container img {
-    width: 32px;
-    height: 32px;
-    margin: 10px;
+  width: 32px;
+  height: 32px;
+  margin: 10px;
+}
+
+@media (min-width: 576px) {
+  html {
+    font-size: 20px;
+  }
+}
+@media (min-width: 768px) {
+  html {
+    font-size: 24px;
+  }
+  .portfolio-item {
+    width: 280px;
+  }
+  .nav-container {
+    display: flex;
+  }
+  .nav-main {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .nav-branch {
+    font-size: 30px;
+    margin-bottom: 0;
+  }
+  .menu-items li {
+    font-size: 18px;
+  }
 }
